--- a/css/default.css
+++ b/css/default.css
@@ -3365,6 +3365,10 @@ ol.link-bibliography-list-compact > li::before {
 /****************/
 
 #x-of-the-day {
+	--ornament-image-left: var(--GW-image-three-wavy-lines-ornament-left-svg);
+	--ornament-image-right: var(--GW-image-three-wavy-lines-ornament-right-svg);
+	--ornament-dark-mode-invert-filter: invert(1);
+
     position: relative;
     margin-top: 2.75rem;
     padding: 3rem 1.5rem 3.75rem 1.5rem;
@@ -3379,7 +3383,7 @@ ol.link-bibliography-list-compact > li::before {
 
 #x-of-the-day::before,
 #x-of-the-day::after {
-	--dark-mode-invert-filter: invert(1);
+	--dark-mode-invert-filter: var(--ornament-dark-mode-invert-filter);
 
     content: "";
     position: absolute;
@@ -3387,8 +3391,8 @@ ol.link-bibliography-list-compact > li::before {
     width: calc(100% - 1rem);
     height: 2rem;
     background-image:
-        var(--GW-image-three-wavy-lines-ornament-left-svg),
-        var(--GW-image-three-wavy-lines-ornament-right-svg);
+        var(--ornament-image-left),
+        var(--ornament-image-right);
     background-repeat: no-repeat;
     background-size: 4rem 100%;
     background-position:
@@ -3435,6 +3439,8 @@ ol.link-bibliography-list-compact > li::before {
 
 #x-of-the-day .site-of-the-day blockquote {
     --background-color: var(--GW-body-background-color);
+    --background-image: var(--GW-image-swiss-spiral-roll-stretched-svg);
+    --background-image-sides: var(--GW-image-swiss-spiral-roll-svg);
 
     position: relative;
     height: var(--box-size);
@@ -3445,7 +3451,7 @@ ol.link-bibliography-list-compact > li::before {
         calc(var(--box-size) + 2.0 * var(--box-padding-top))
         var(--box-padding-bottom)
         calc(var(--box-size) + 2.0 * var(--box-padding-top) + var(--box-horizontal-offset));
-    background-image: var(--GW-image-swiss-spiral-roll-stretched-svg);
+    background-image: var(--background-image);
     background-size: 1000% 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -3470,7 +3476,7 @@ ol.link-bibliography-list-compact > li::before {
     position: absolute;
     width: var(--box-total-size);
     height: var(--box-total-size);
-    background-image: var(--GW-image-swiss-spiral-roll-svg);
+    background-image: var(--background-image-sides);
     background-repeat: no-repeat;
     background-color: inherit;
     background-size: cover;
@@ -3523,6 +3529,9 @@ ol.link-bibliography-list-compact > li::before {
 }
 
 #footer-decoration-container .footer-logo {
+	--logo-image: var(--GW-image-logo-smooth-svg);
+	--logo-image-dark-mode-invert-filter: invert(1);
+
     display: block;
     height: 30px;
     position: relative;
@@ -3554,9 +3563,9 @@ ol.link-bibliography-list-compact > li::before {
     background-color: var(--GW-body-background-color);
 }
 #footer-decoration-container .footer-logo::after {
-	--dark-mode-invert-filter: invert(1);
+	--dark-mode-invert-filter: var(--logo-image-dark-mode-invert-filter);
 
-    background-image: url('/static/img/logo/logo-smooth.svg');
+    background-image: var(--logo-image);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
