--- a/css/default.css
+++ b/css/default.css
@@ -5063,6 +5063,8 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+
+	color: var(--popframe-title-link-color, var(--GW-body-link-color));
 }
 
 /*  Buttons in the popin title bar.
