default.html: more consistent use of 'Gwern'

--- a/template/default.html
+++ b/template/default.html
@@ -25,8 +25,8 @@
   <meta name="author" content="$author$">
   <meta name="citation_author" content="$author$">
   $else$
-  <meta name="author" content="Gwern Branwen">
-  <meta name="citation_author" content="Gwern Branwen">
+  <meta name="author" content="Gwern">
+  <meta name="citation_author" content="Gwern">
   $endif$
   <meta name="contact" content="https://gwern.net/me#contact">
   <link rel="index" title="Gwern.net homepage" href="https://gwern.net/index">
@@ -73,7 +73,7 @@
   <link id="favicon-apple-touch" rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch.png">
   <link id="favicon-apple-touch-dark" rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch-dark.png" media="all and (prefers-color-scheme: dark)">
 
-  <!-- CSS for JS-disabled users: ensure that NoScripters know what they are missing even if they jump to a section & miss the warning at top/bottom. --> 
+  <!-- CSS for JS-disabled users: ensure that NoScripters know what they are missing even if they jump to a section & miss the warning at top/bottom. -->
   <noscript>
     <style>
       #markdownBody #noscript-warning-header {
@@ -108,7 +108,7 @@ $if(index)$<body class="page-$safe-url$">$else$<body class="page-$safe-url$ $css
     <!--#include virtual="/static/include/sidebar.html" -->
     <!-- SIDEBAR-END -->
 
-    <article> 
+    <article>
 
       <header>
         <h1>$title$</h1>
