--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2384,6 +2384,13 @@ figure .image-wrapper::before {
 	max-width: unset;
 }
 
+/*	Figures in blockquotes.
+ */
+blockquote figure.outline-not img,
+blockquote figure.outline-not video {
+	outline: 1px solid var(--border-color);
+}
+
 /*  Image alt-text.
     */
 img::before {
