--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2527,6 +2527,7 @@ p.intro-graf::first-line {
     display: flow-root;
     margin: auto;
     padding: 0.75em 2.5em;
+    overflow: hidden;
 }
 
 .epigraph blockquote {
