--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1145,6 +1145,17 @@ section.level6 > .heading {
     background: none;
 }
 
+/*	No visited link styling in headings.
+ */
+.markdownBody .heading a:link,
+.markdownBody .heading a:visited {
+	color: var(--GW-body-link-color);
+}
+.markdownBody .heading a:hover,
+.markdownBody .heading a:visited:hover {
+	color: var(--GW-body-link-hover-color);
+}
+
 /*  Disable bold within headings.
  */
 .heading strong {
