--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -5916,7 +5916,8 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .popup.object.focused .popframe-content-view::before {
     visibility: hidden;
 }
-.popup.object.dragging .popframe-content-view::before {
+.popup.object.dragging .popframe-content-view::before,
+.popup.object.resizing .popframe-content-view::before {
     visibility: visible;
 }
 
