--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -5181,6 +5181,8 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .popframe-body.object iframe {
     border: unset;
     max-height: unset;
+    height: var(--popframe-scroll-view-height);
+    width: 100%;
 }
 
 /*  Don’t show when loading failed.
@@ -5894,12 +5896,30 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup-body.object,
 .popup-body.object figure,
-.popup-body.object .figure-outer-wrapper,
-.popup-body.object .image-wrapper {
+.popup-body.object .figure-outer-wrapper {
 	flex: 1 0 auto;
 	display: flex;
 	width: 100%;
 	height: 100%;
+}
+
+.popup-body.object .figure-outer-wrapper {
+	background-color: var(--GW-popups-popup-border-color);
+}
+
+.popup-body.object .image-wrapper {
+	flex: 0 1 auto;
+	display: flex;
+	width: auto;
+}
+
+.popup-body.image.zoomed img,
+.popup-body.video.zoomed video,
+.popup-body.image.resized img,
+.popup-body.video.resized video {
+	width: calc(var(--popframe-scroll-view-height) * var(--aspect-ratio)) !important;
+	height: unset !important;
+	max-height: unset;
 }
 
 /*  Overlay (for dragging / click capturing).
@@ -5956,13 +5976,13 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     min-height: var(--GW-popups-video-popup-min-height);
 }
 
-.popup-body.video.youtube iframe {
-    width: var(--GW-popups-video-youtube-iframe-width);
-    height: var(--GW-popups-video-youtube-iframe-height);
+.popup.video.youtube {
+	width: calc(var(--GW-popups-video-youtube-iframe-width) + 2 * var(--GW-popups-popup-border-width));
+	height: calc(var(--GW-popups-video-youtube-iframe-height) + 2 * var(--GW-popups-popup-border-width) + var(--popup-title-bar-height));
 }
-.popup-body.video.vimeo iframe {
-    width: var(--GW-popups-video-vimeo-iframe-width);
-    height: var(--GW-popups-video-vimeo-iframe-height);
+.popup.video.vimeo {
+	width: calc(var(--GW-popups-video-vimeo-iframe-width) + 2 * var(--GW-popups-popup-border-width));
+	height: calc(var(--GW-popups-video-vimeo-iframe-height) + 2 * var(--GW-popups-popup-border-width) + var(--popup-title-bar-height));
 }
 
 /*┌───────────────┐*/
@@ -5998,6 +6018,11 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*┌────────────────────────┐*/
 /*│ Local document popups. │*/
 /*└────────────────────────┘*/
+
+.popup.local-document {
+	width: var(--GW-popups-popup-max-width);
+	height: var(--GW-popups-popup-max-height);
+}
 
 /*┌──────────────────────────┐*/
 /*│ Local transclude popups. │*/
