--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2173,6 +2173,13 @@ blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::
     opacity: 0.70;
 }
 
+/*	In sidenotes.
+ */
+.sidenote .collapse.section-backlinks-container {
+	margin-left: 0;
+}
+
+
 /****************************************************/
 /*  Miscellaneous/general content in collapse blocks.
  */
