--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -2780,12 +2780,14 @@ body.page-index[class*='special-christmas'] #sidebar a.logo {
 	font-display: swap;
 	unicode-range: U+0020-007E, U+00A0-00FF, U+2010, U+2013-2014, U+2018-2019, U+201C-201D, U+2212;
 }
-/*	Elements to be deleted completely.
+/*  Elements to be deleted completely.
  */
 body.reader-mode-active #sidebar,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
 body.reader-mode-active #page-metadata .page-importance,
+body.reader-mode-active #page-metadata .page-backlinks,
+body.reader-mode-active #page-metadata .page-similars,
 body.reader-mode-active #page-metadata .backlinks,
 body.reader-mode-active #page-metadata .link-bibliography,
 body.reader-mode-active #page-metadata .similars,
@@ -2797,24 +2799,25 @@ body.reader-mode-active #sidenote-column-right,
 body.reader-mode-active #navigation,
 body.reader-mode-active #footer,
 body.reader-mode-active .inflation-adjusted .subsup,
-body.reader-mode-active .has-recently-modified-icon .recently-modified-icon-hook
-body.reader-mode-active .date-range sub {
+body.reader-mode-active .has-recently-modified-icon .recently-modified-icon-hook,
+body.reader-mode-active .date-range sub,
+body.reader-mode-active .file-includes {
     display: none;
 }
 
-/*	Link icons in reader mode just don’t work well, sadly.
-		—SA 2024-11-27
+/*  Link icons in reader mode just don’t work well, sadly.
+        —SA 2024-11-27
  */
 body.reader-mode-active .markdownBody a .link-icon-hook {
     display: none;
 }
 
 body.reader-mode-active .markdownBody a .recently-modified-icon-hook {
-	display: none;
+    display: none;
 }
 
-/*	Preserve the positioning of related elements by hiding visibility, instead 
-	of deleting entirely.
+/*  Preserve the positioning of related elements by hiding visibility, instead
+    of deleting entirely.
  */
 body.reader-mode-active .date-range .subsup sub {
     visibility: hidden;
@@ -2836,19 +2839,19 @@ body.reader-mode-active #TOC ul li {
 /*  Links.
  */
 body.reader-mode-active .markdownBody a.has-indicator-hook {
-	margin: 0;
+    margin: 0;
     position: relative;
     z-index: 111;
 }
 
 body.reader-mode-active .markdownBody a .indicator-hook {
-	background-image: inherit;
-	background-size: inherit;
-	background-repeat: inherit;
-	background-position: inherit;
+    background-image: inherit;
+    background-size: inherit;
+    background-repeat: inherit;
+    background-position: inherit;
     background-color: var(--link-underline-background-color);
     box-shadow: -2px 0 0 0 var(--link-underline-background-color);
-	margin-left: -0.3em;
+    margin-left: -0.3em;
 }
 body.reader-mode-active.masked-links-hidden .markdownBody a .indicator-hook {
     visibility: hidden;
@@ -2910,19 +2913,19 @@ body.reader-mode-active .date-range .subsup {
     margin: 0;
 }
 
-/*	Anti-style zone.
+/*  Anti-style zone.
  */
 body.reader-mode-active .reader-mode-style-not * {
-	font-weight: inherit;
-	font-style: inherit;
-	font-variant: inherit;
-	color: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+    font-variant: inherit;
+    color: inherit;
 }
 
 /*  Mobile layout adjustments.
  */
 @media all and (max-width: 649px) {
-	body.reader-mode-active article {
-		margin-top: 0;
-	}
+    body.reader-mode-active article {
+        margin-top: 0;
+    }
 }
